--- a/index.html
+++ b/index.html
@@ -39,11 +39,6 @@
             <h2> This is an image of a techie working towards an impact! </h2>
             <img src="Assets/lady with laptop.jpg" alt="lady working on her laptop" />
             <div>
-            <address>
-                Mary A. Awe
-                A Frontend Engineer in view
-            </address>
-            
             <div>
                 <h2> What I have learnt so far: </h2>
                 <ul>
@@ -70,6 +65,10 @@
                 <h2>  Whenever we win together, we look just like happy people </h2>
                 <img src="Assets/friends.jpg" alt="techies smiling">
             </div>
+            <address>
+                Mary A. Awe <br>
+                A Frontend Engineer in view
+            </address>
 <!--  Footer Section -->
 
 <footer>
