A Simple Web page

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 Women no longer have an ‘if I can’ mindset. Now it’s more about ‘how I can’— be in tech, start something in tech, fund something in tech. That shift is exciting! And it happened because we created a network where we show, daily, that women are innovating. <p> As A female I'm motivated to continue to horn my skill till I become the very <q> Big Force</q> in Tech, solving and creating solutions.</p></blockquote>
         </div>
         <div>
-            <h1> My name is Awe Mary, affirmation that keeps me going includes: </h1>
+            <h1> My name is Awe Mary, I'm a Frontend Web developer, affirmation that keeps me going includes: </h1>
             <h2> I Recongnize and Embrace my Uniqueness. </h2>
             <h3> I Utilize Opportunity. </h3>
             <h4> I move towards the change I yarn for. 👍</h4>
@@ -37,7 +37,7 @@
         <p> My love for tech made me register for the <abbr title=" Women Tech Makers"> WTM</abbr> Frontend Development Mentorship Programme. I can move towards the change and impact I was created for</p>
         <div>
             <h2> This is an image of a techie working towards an impact! </h2>
-            <img src="Assets/lady with laptop.jpg" alt="lady working on her laptop" />
+            <img src="Assets/lady with laptop.jpg" alt="lady working on her laptop"  width="300" height="400"/>
             <div>
             <div>
                 <h2> What I have learnt so far: </h2>
