simple web page

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <!-- A short Story about Mary A. Awe -->
 
     <article>A short story how I got into Tech<br>
-        <b> The first attraction or should I call it Desire</b>
+        <p> <b> The first attraction or should I call it Desire</b> </p>   
         <strong>  I was amazed about how electronic gadget works! </strong>
         <p> <em> I always wanted to build something with my hands. </em> </p>
         <div>
