A simple web page

--- a/index.html
+++ b/index.html
@@ -36,8 +36,10 @@
          </h2>
         <p> My love for tech made me register for the <abbr title=" Women Tech Makers"> WTM</abbr> Frontend Development Mentorship Programme. I can move towards the change and impact I was created for</p>
         <div>
-            <h2> This is an image of a techie working towards an impact! </h2>
+            <h3> This is an image of a techie working towards an impact! </h3>
             <img src="Assets/lady with laptop.jpg" alt="lady working on her laptop"  width="300" height="400"/>
+            <h3> This is an image of me</h3>
+            <img src="Assets/Mary.JPG" alt="mary working on her laptop" width="600" height="500">
             <div>
             <div>
                 <h2> What I have learnt so far: </h2>
