--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
         <p> My love for tech made me register for the <abbr title=" Women Tech Makers"> WTM</abbr> Frontend Development Mentorship Programme. I can move towards the change and impact I was created for</p>
         <div>
             <h3> This is an image of a techie working towards an impact! </h3>
-            <img src="Assets/lady with laptop.jpg" alt="lady working on her laptop"  width="300" height="400"/>
+            <img src="Assets/lady with laptop.jpg" alt="lady working on her laptop"  width="500" height="400"/>
             <h3> This is an image of me</h3>
-            <img src="Assets/Mary.JPG" alt="mary working on her laptop" width="600" height="500">
+            <img src="Assets/Mary.JPG" alt="mary working on her laptop" width="500" height="400" />
             <div>
             <div>
                 <h2> What I have learnt so far: </h2>
@@ -65,7 +65,7 @@
                 </dl>
 
                 <h2>  Whenever we win together, we look just like happy people </h2>
-                <img src="Assets/friends.jpg" alt="techies smiling">
+                <img src="Assets/friends.jpg" alt="techies smiling" width="500" height="400" />
             </div>
             <address>
                 Mary A. Awe <br>
